--- a/motyl.conf
+++ b/motyl.conf
@@ -1,11 +1,10 @@
 lang: en
-title: Opinionated static site generator
+title: 
 name: ryanliptak.com
-description: Motyl, an opinionated static site generator written in Lua.
-keywords: static, site, generator, ssg, motyl, lua
+description: 
+keywords: 
 author: Ryan Liptak
-copyright: '2016-2017'
-url: https://github.com/fcambus/motyl
+url: https://www.ryanliptak.com/
 feedItems: 20
 pages:
 - title: 'Home'
