Make time in date of blog posts optional

--- a/posts/rampsliding-engine-quirk.yaml
+++ b/posts/rampsliding-engine-quirk.yaml
@@ -1,6 +1,7 @@
 title: "Rampsliding is a Quake engine quirk in the same way that bunnyhopping is"
-date: 2019-05-16 00:00
+date: "2019-05-16"
 description: Rampsliding is a Quake/Half-Life engine quirk in the same way that bunnyhopping is
 keywords: quake, bunnyhopping, rampsliding
 categories:
 - Games
+featured: true
