--- a/posts/vegan-french-onion-dip.yaml
+++ b/posts/vegan-french-onion-dip.yaml
@@ -1,5 +1,5 @@
 title: "Vegan French Onion Dip"
-date: 2018-11-26 00:00
+date: "2018-11-26"
 description: Recipe for simple vegan french onion dip without a spice mix packet
 keywords: vegan, recipe
 categories:
