rampsliding: Finishing touches for some sections/cleanup

--- a/posts/rampsliding-engine-quirk.yaml
+++ b/posts/rampsliding-engine-quirk.yaml
@@ -1,6 +1,6 @@
-title: "Rampsliding is a Quake engine quirk in the same way that bunnyhopping is"
+title: "Rampsliding Is a Quake Engine Quirk in the Same Way That Bunnyhopping Is"
 date: "2019-05-16"
-description: Rampsliding is a Quake/Half-Life engine quirk in the same way that bunnyhopping is
+description: More than you wanted to know about rampsliding in the Quake and Half-Life engines
 keywords: quake, bunnyhopping, rampsliding
 categories:
 - Games
