--- a/posts/fuzzing-zig-code.yaml
+++ b/posts/fuzzing-zig-code.yaml
@@ -1,4 +1,4 @@
-title: "Fuzzing Zig Code using AFL++"
+title: "Fuzzing Zig Code Using AFL++"
 date: "2021-09-19"
 description: A stop-gap solution for fuzzing Zig code
 keywords: zig, afl, fuzzing
